http://www.redmine.org/

== TBD v1.4.4

* Defect #11160: SQL Error on time report if a custom field has multiple values for an entry
* Defect #11061: Cannot choose commit versions to view differences in Git/Mercurial repository view
* Defect #11112: REST API - custom fields in POST/PUT ignored for time_entries
* Defect #11133: Wiki-page section edit link can point to incorrect section
* Feature #6597: Configurable session lifetime and timeout
* Patch #11113: Small glitch in German localization

== 2012-06-05 v1.4.3

* Defect #11038: "Create and continue" should preserve project, issue and activity when logging time
* Defect #11046: Redmine.pm does not support "bind as user" ldap authentication
* Defect #11051: reposman.rb fails in 1.4.2 because of missing require for rubygems
* Fix for Rails vulnerability CVE-2012-2660

== 2012-05-13 v1.4.2

* Defect #10744: rake task redmine:email:test broken
* Defect #10787: "Allow users to unsubscribe" option is confusing
* Defect #10827: Cannot access Repositories page and Settings in a Project - Error 500
* Defect #10829: db:migrate fails 0.8.2 -> 1.4.1
* Defect #10832: REST Uploads fail with fastcgi
* Defect #10837: reposman and rdm-mailhandler not working with ruby 1.9.x
* Defect #10856: can not load translations from hr.yml with ruby1.9.3-p194
* Defect #10865: Filter reset when deleting locked user
* Feature #9790: Allow filtering text custom fields on "is null" and "is not null"
* Feature #10778: svn:ignore for config/additional_environment.rb
* Feature #10875: Partial Albanian Translations
* Feature #10888: Bring back List-Id to help aid Gmail filtering
* Patch #10733: Traditional Chinese language file (to r9502)
* Patch #10745: Japanese translation update (r9519)
* Patch #10750: Swedish Translation for r9522
* Patch #10785: Bulgarian translation (jstoolbar)
* Patch #10800: Simplified Chinese translation

== 2012-04-20 v1.4.1

* Defect #8574: Time report: date range fields not enabled when using the calendar popup